--- a/Templates/index.html
+++ b/Templates/index.html
@@ -4,7 +4,8 @@
 
 
 {% block content %}
-<div class="ui segment center aligned" style="min-height: calc(100vh - 47px);box-shadow: none !important;border: none !important;">
+<div class="ui segment center aligned"
+     style="min-height: calc(100vh - 47px);box-shadow: none !important;border: none !important;">
     <h1 class="ui center aligned header" style="padding-top: 35vh;font-size: 2.5em;">Welcome to Sword Art Online!</h1>
 </div>
 {% endblock %}
