--- a/Templates/layouts/base.html
+++ b/Templates/layouts/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 {% load i18n static %}
 {% get_current_language as LANGUAGE_CODE %}
-<html lang="{{ LANGUAGE_CODE|default:'zh-Hant' }}" >
+<html lang="{{ LANGUAGE_CODE|default:'zh-Hant' }}">
 <head>
     <!-- Standard Meta -->
     <meta charset="utf-8">
@@ -22,22 +22,23 @@
 {% load i18n %}
 
 <body class="pushable">
-    <!-- Navbar -->
-    {% include "navbar/navbar.html" %}
-    <!-- MainBlock -->
-    <div class="pusher">
-        <div class="ui container">
-            <!-- Content -->
-            {% block content %}{% endblock %}
-        </div>
-        <!-- Footer -->
-        {% include "layouts/footer.html" %}
+<!-- Navbar -->
+{% include "navbar/navbar.html" %}
+<!-- MainBlock -->
+<div class="pusher">
+    <div class="ui container">
+        <!-- Content -->
+        {% block content %}{% endblock %}
     </div>
-    <!-- JavaScript -->
-    <script src="//code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.js"></script>
-    <script src="//cdn.jsdelivr.net/alertifyjs/1.10.0/alertify.min.js"></script>
-    <script src="//cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
-    <script src="//cdn.datatables.net/1.10.15/js/dataTables.semanticui.min.js"></script>
+    <!-- Footer -->
+    {% include "layouts/footer.html" %}
+</div>
+<!-- JavaScript -->
+<script src="//code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.js"></script>
+<script src="//cdn.jsdelivr.net/alertifyjs/1.10.0/alertify.min.js"></script>
+<script src="//cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+<script src="//cdn.datatables.net/1.10.15/js/dataTables.semanticui.min.js"></script>
 </body>
 </html>
